# ChangeLog for sys-apps/portage
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.00.14724 (24 Oct 2009)

  24 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14701.ebuild, +portage-2.2.00.14724.ebuild:
  Bump, fix emerge hangs on Solaris and wrong path for CONFIG_MEMORY_FILE,
  bug #290254

*portage-2.2.00.14701 (21 Oct 2009)

  21 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14700.ebuild, +portage-2.2.00.14701.ebuild:
  Replace last snapshot, fixed a bug in dohtml complaining about missing
  dohtml.py

*portage-2.2.00.14700 (20 Oct 2009)

  20 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14200.ebuild, +portage-2.2.00.14700.ebuild:
  Bump, fixes hang on FreeBSD, fixes emaint double prefix error, bug #289835

  15 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.00.14555.ebuild:
  We need python-2.6 for exception syntax

*portage-2.2.00.14555 (10 Oct 2009)

  10 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14183.ebuild, +portage-2.2.00.14555.ebuild, metadata.xml:
  Bump, openpty is now only tried on FreeBSD and Linux, possible fix for bug
  #285720 (backslashes in groupname), fix for bug #288025 (unconditional
  statvfs usage)

*portage-2.2.00.14487 (04 Oct 2009)

  04 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14277.ebuild, +portage-2.2.00.14487.ebuild:
  Bump, this version equals the code from 2.2_rc43 with Prefix patches.
  Shebang check is now restricted to only abort when the offending file
  is in $PATH.

*portage-2.2.00.14277 (21 Sep 2009)

  21 Sep 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14160.ebuild, +portage-2.2.00.14277.ebuild:
  Bump, add QA check for shebangs, bug #282539. You may see messages about
  fixed shebangs from now on.

*portage-2.2.00.14200 (14 Sep 2009)

  14 Sep 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.13878.ebuild, +portage-2.2.00.14200.ebuild: