@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.14746 (30 Oct 2009)
+
+  30 Oct 2009; Fabian Groffen <grobian@gentoo.org>
+  +portage-2.2.00.14746.ebuild:
+  Bump, include AIX preserve-libs patches
+
 *portage-2.2.00.14724 (24 Oct 2009)
 
   24 Oct 2009; Fabian Groffen <grobian@gentoo.org>
